--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.address=localhost
 server.port=21986
 server.ssl.enabled=false
+
+hashing.scrypt.cpuCostParam=256
+hashing.scrypt.memoryCostParam=4
+hashing.scrypt.parallelizationParam=2
+hashing.scrypt.dkLen=32
+hashing.scrypt.salt=91, -75, -13, 76, 105, 57, 69, -74, -111, 113, 27, -47, 88, -86, -72, 95
