--- a/node/src/main/resources/application.properties
+++ b/node/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.address=localhost
 server.port=21986
 server.ssl.enabled=false
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
 
 hashing.scrypt.cpuCostParam=256
 hashing.scrypt.memoryCostParam=4
