Bugfixes in Client-Methoden

--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 server.address=localhost
 server.port=21986
 server.ssl.enabled=false
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+
+hashing.scrypt.cpuCostParam=256
+hashing.scrypt.memoryCostParam=4
+hashing.scrypt.parallelizationParam=2
+hashing.scrypt.dkLen=32
+hashing.scrypt.salt=91, -75, -13, 76, 105, 57, 69, -74, -111, 113, 27, -47, 88, -86, -72, 95
 
 storage.path=/pk_jblockchain/
