--- a/client/src/main/resources/application.properties
+++ b/client/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-server.address=localhost
 server.port=21986
 server.ssl.enabled=false
 server.compression.enabled=true
@@ -11,3 +10,20 @@ hashing.scrypt.dkLen=32
 hashing.scrypt.salt=91, -75, -13, 76, 105, 57, 69, -74, -111, 113, 27, -47, 88, -86, -72, 95
 
 storage.path=/pk_jblockchain/
+
+/*
+ 	Address of a Node to use for initialization
+
+ 	TODO: 	add addresses of fully trustable hosts
+			for masternode backbone network here... */
+blockchain.masterNodeAddresses=http://localhost:80
+
+/*
+	Minimum number of leading zeros every block hash has to fulfill
+*/
+blockchain.mining.difficulty=1
+ 
+/*
+	Maximum number of Transactions a Block can hold
+ */
+blockchain.mining.maxTransactionsPerBlock=100
